2007-12-28 Jim Sack <jgsack@san.rr.com>
	* src/gen/utils/test/callback_test.py: rename dup name (fn -> fn3)
	The dup name was harmless but confusing, and a potential future
	problem. Thanks to Raphael Ackermann for pointing this out.

2007-12-28 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: remove unused functions, add alt actions left/right
	* src/GrampsDb: deleted with _GrampsDbWriteXML.py,
		_GrampsDbFactories.py, _GrampsGEDDB.py, _GrampsXMLDB.py,
		__init__.py, Makefile.am, _GrampsInMemDB.py, _GrampsBSDDB.py.
		No more inmemory databases
	* src/GrampsDbUtils: moved here _GrampsDbWriteXML.py and _GrampsBSDDB.py
	* src/plugins/ReadGrdb.py:
	* src/plugins/Checkpoint.py:
	* src/ObjectSelector/_ObjectSelectorWindow.py:
	* src/DbManager.py:
	* src/GrampsDbUtils/_WriteGrdb.py:
	* src/GrampsDbUtils/__init__.py:
	* src/GrampsDbUtils/_GrampsDbWRFactories.py:
	* src/GrampsDbUtils/_WriteXML.py:
	* src/GrampsDbUtils/Makefile.am:
	* src/gramps_main.py:
	* src/RecentFiles.py: recent-files-gramps.xml, don't overwrite 2.2.x data
	* src/ArgHandler.py:
	* src/DbLoader.py: remove unused functions
	* src/Makefile.am:
	* po/POTFILES.in:
	* src/GrampsDbUtils/importdbdir.py: allow import of new database via cli
	Remove inMem Editing, move remaining to DbUtils, fix ArgHandler

2007-12-28  Stéphane Charette <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py
	* src/plugins/GVFamilyLines.py
	* src/plugins/GVRelGraph.py
	* src/plugins/Makefile.am
	* src/PluginUtils/__init__.py
	* src/PluginUtils/_MenuOptions.py
	* po/POTFILES.in
	Work in progress; partial conversion of FamilyLines to the new
	GraphViz report class.  (Doesn't yet work, keep using the old one
	in "Code Generators" until the bugs are fully ironed out.)

2007-12-27  Brian Matherly <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	Convert to use MenuOption

2007-12-27  Douglas S. Blank  <dblank@cs.brynmawr.edu>